Сделан первый  блок без адаптива

--- a/index.html
+++ b/index.html
@@ -18,41 +18,89 @@
 </head>
 <body>
     <header class="header">
-        <div class="navbar">
-             <div class="navbar-background">
-                <div class="container">
-                    <div class="navbar-wrap">
-                        <a href="index.html" class="logo navbar__logo">
-                        <img src="img/logo.svg" alt="">
-                        </a>
-                        <nav class="nav">
-                             <ul>
-                                 <a href="#" class="navbar__nav-link"><li>Виды макетов</li></a>
-                                 <a href="#" class="navbar__nav-link"><li>Этапы работы</li></a>
-                                 <a href="#" class="navbar__nav-link"><li>Портфолио</li></a>
-                                  <a href="#" class="navbar__nav-link"><li>Цены</li></a>
-                                 <a href="#" class="navbar__nav-link"><li>Отзывы</li></a>
-                                 <a href="#" class="navbar__nav-link"><li>Контакты</li></a>
-                             </ul>
-                        </nav> 
-                        <div class="navbar_button_case">
-                            <button class="navbar__button">Заказать звонок</button>
+            <div class="navbar">
+                <div class="navbar-background">
+                    <div class="container">
+                        <div class="navbar-wrap">
+                            <a href="index.html" class="logo navbar__logo">
+                            <img src="img/logo.svg" alt="">
+                            </a>
+                            <nav class="nav">
+                                <ul>
+                                    <a href="#" class="navbar__nav-link"><li>Виды макетов</li></a>
+                                    <a href="#" class="navbar__nav-link"><li>Этапы работы</li></a>
+                                    <a href="#" class="navbar__nav-link"><li>Портфолио</li></a>
+                                    <a href="#" class="navbar__nav-link"><li>Цены</li></a>
+                                    <a href="#" class="navbar__nav-link"><li>Отзывы</li></a>
+                                    <a href="#" class="navbar__nav-link"><li>Контакты</li></a>
+                                </ul>
+                            </nav> 
+                            <div class="navbar_button_case">
+                                <button class="navbar__button">Заказать звонок</button>
+                            </div>
+                            <div class="navbar__landline">
+                                <a href="tel:79106662479" class="navbar__mobile">+7 (910) 666-24-79</a>
+                                <a href="mailto:examplemail@gmail.com" class="navbar__email">examplemail@gmail.com</a>
+                            </div>
+                            <button class="menu-button">
+                                <img src="img/burger.svg" alt="">
+                            </button>
                         </div>
-                        <div class="navbar__landline">
-                            <a href="tel:79106662479" class="navbar__mobile">+7 (910) 666-24-79</a>
-                            <a href="mailto:examplemail@gmail.com" class="navbar__email">examplemail@gmail.com</a>
-                        </div>
-                        <button class="menu-button">
-                            <img src="img/burger.svg" alt="">
-                        </button>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div>      
+                <div class="hero__background">
+                    <div class="hero">
+                         <div class="container">
+                            <h1 class="hero__tittle">
+                            Создаем макеты<br>
+                            для нестандартных<br>
+                            задач
+                            </h1>
+                            <p class="hero__article">Воплощаем в жизнь самые смелые идеи. Используем при этом <br>
+                                                все доступные технологии и материалы: от фрезировки<br>
+                                                до 3D печати, от пластика до натуральных природных материалов.</p>
+                            <h2 class="hero__subtittle">Нет времени читать? Расскажем! </h2>
+                            <form class="hero__form">
+                                <input type="text" value="Как вас зовут?" class="hero__input-name">
+                                <input type="text" value="Номер телефона" class="hero__input-mobile">
+                                <button class="hero__button">Заказать звонок</button>
+                                <p class="hero__form-article">Нажимая на кнопку, вы даете согласие с политикой конфиденциальности</p>
+                            </form>
+                            <div class="hero__advantages">
+                                <span><h3>Сроки</h3>
+                                <p>Простой проект сделаем<br> за два дня, а сложный<br>
+                                за два месяца</p></span>
+                               <span><h3>Гарантия</h3>
+                                <p>Мы гарантируем<br> качество каждого макета<br>
+                                и не разочаруем вас</p></span>
+                                <span><h3>Сложность</h3>
+                                <p>Мы любим вызовы,<br> 
+                                поэтому чем сложнее<br>
+                                макет, тем нам интереснее</p></span>
+                                <span><h3>Доставка</h3>
+                                <p>Доставим макет по всей <br>России и ближайшему<br>
+                                зарубежью</p></span>
+                            </div>
+                        </div>
+                 </div>
+                </div>
     </header>
+    
 </body>
 </html>
-
+<div class="andre">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</div>
 
 </body>
 </html>
