--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Citrone</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normolize.css">
 </head>
@@ -37,16 +38,15 @@
                 </div>
             </div>
         </div>     
-                <div class="hero__background">
-                    <div class="hero">
-                         <div class="container">
+        <div class="hero">
+            <div class="container">
                             <h1 class="hero__tittle">
-                            Создаем макеты<br>
-                            для нестандартных<br>
+                            Создаем макеты
+                            для нестандартных
                             задач
                             </h1>
-                            <p class="hero__article">Воплощаем в жизнь самые смелые идеи. Используем при этом <br>
-                                                все доступные технологии и материалы: от фрезировки<br>
+                            <p class="hero__article">Воплощаем в жизнь самые смелые идеи. Используем при этом
+                                                все доступные технологии и материалы: от фрезировк
                                                 до 3D печати, от пластика до натуральных природных материалов.</p>
                             <h2 class="hero__subtittle">Нет времени читать? Расскажем! </h2>
                             <form class="hero__form">
@@ -55,24 +55,26 @@
                                 <button class="hero__button">Заказать звонок</button>
                                 <p class="hero__form-article">Нажимая на кнопку, вы даете согласие с политикой конфиденциальности</p>
                             </form>
-                            <div class="hero__advantages">
-                                <div><h3>Сроки</h3>
-                                <p>Простой проект сделаем<br> за два дня, а сложный<br>
-                                за два месяца</p></div>
-                                <div><h3>Гарантия</h3>
-                                <p>Мы гарантируем<br> качество каждого макета<br>
-                                и не разочаруем вас</p></div>
-                                <div>><h3>Сложность</h3>
-                                <p>Мы любим вызовы,<br> 
-                                поэтому чем сложнее<br>
-                                макет, тем нам интереснее</p></div>
-                                <div><h3>Доставка</h3>
-                                <p>Доставим макет по всей <br>России и ближайшему<br>
-                                зарубежью</p></span>
+                            <div class="wrapper">
+                                <div class="hero__advantages">
+                                    <div><h3>Сроки</h3>
+                                        <p>Простой проект сделаем за два дня, а сложный
+                                        за два месяца</p></div>
+                                    <div><h3>Гарантия</h3>
+                                        <p>Мы гарантируем качество каждого макета
+                                        и не разочаруем вас</p></div>
+                                    <div><h3>Сложность</h3>
+                                        <p>Мы любим вызовы, 
+                                        поэтому чем сложнее
+                                        макет, тем нам интереснее</p></div>
+                                    <div><h3>Доставка</h3>
+                                        <p>Доставим макет по всей России и ближайшему
+                                        зарубежью</p></div>
+                                </div>
                             </div>
-                        </div>
-                 </div>
              </div>
+                
+        </div>
     </header>
     
      <img  class="rocket" src="img/rocket.png" alt="">
